crates/bevy_basisu_loader/src/snapshots/bevy_basisu_loader__transcoder__tests__bcn_skybox_xuastc_ldr_8x8_cubemap_mips.snap
---
source: crates/bevy_basisu_loader/src/transcoder.rs
expression: image.data.take().unwrap()
extension: bin
snapshot_kind: binary
---
